[app] Display options "visible on all workspaces" for OSs supported Close issue #20

--- a/app/window.css
+++ b/app/window.css
@@ -55,7 +55,7 @@ webview {
 }
 
 label[for="visibleOnAllWorkspaces"] {
-        display: none;
+        display: block;
 }
 
 #url {
